--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ before_install:
 install:
 - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
 script:
-- set -o pipefail && xcodebuild clean build -workspace Example/PhotoSliderDemo.xcworkspace -scheme PhotoSliderDemo -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO -arch i386 | xcpretty -c
+- set -o pipefail && xcodebuild clean build -workspace Example/PhotoSliderDemo.xcworkspace -scheme PhotoSliderDemo -sdk iphonesimulator ONLY_ACTIVE_ARCH=YES | xcpretty -c
 - pod lib lint --quick
