--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ before_install:
 install:
 - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
 script:
-- set -o pipefail && xcodebuild clean build -workspace Example/PhotoSliderDemo.xcworkspace -scheme PhotoSliderDemo -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO VALID_ARCHS="armv6 armv7 i386" TARGETED_DEVICE_FAMILY="1"
+- set -o pipefail && xcodebuild clean build -workspace Example/PhotoSliderDemo.xcworkspace -scheme PhotoSliderDemo -sdk iphonesimulator -arch i386 ONLY_ACTIVE_ARCH=NO VALID_ARCHS="armv6 armv7 i386" TARGETED_DEVICE_FAMILY="1"
 - pod lib lint --quick
