--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,12 +3,12 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, "8.0"
 use_frameworks!
 
-target 'PhotoSliderDemo', :exclusive => true do
+target 'PhotoSlider', :exclusive => true do
   pod "PhotoSlider", :path => "../"
   pod 'SDWebImage'
 end
 
-target 'PhotoSliderDemoTests', :exclusive => true do
+target 'PhotoSliderTests', :exclusive => true do
   pod "PhotoSlider", :path => "../"
   pod 'SDWebImage'
 end
