--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@
 
 language: objective-c
 # cache: cocoapods
-# podfile: Example/Podfile
+# podfile: Podfile
 before_install:
 - gem install cocoapods # Since Travis is not always on latest version
-- pod install --project-directory=Example
+- pod install
 install:
 - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
 script:
-- set -o pipefail && xcodebuild test -workspace Example/PhotoSliderDemo.xcworkspace -scheme PhotoSliderDemo -destination-timeout 1 -sdk iphonesimulator -configuration Debug -destination 'name=iPhone 6'
+- set -o pipefail && xcodebuild test -workspace PhotoSlider.xcworkspace -scheme PhotoSlider -destination-timeout 1 -sdk iphonesimulator -configuration Debug -destination 'name=iPhone 6'
 - pod lib lint --quick
