--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Carthage/Checkouts/SDWebImage"]
 	path = Carthage/Checkouts/SDWebImage
-	url = https://github.com/rs/SDWebImage
+	url = https://github.com/rs/SDWebImage.git
