--- a/Example/PhotoSliderDemo.xcodeproj/xcshareddata/xcschemes/PhotoSliderDemo.xcscheme
+++ b/Example/PhotoSliderDemo.xcodeproj/xcshareddata/xcschemes/PhotoSliderDemo.xcscheme
@@ -85,6 +85,13 @@
             ReferencedContainer = "container:PhotoSliderDemo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "CG_CONTEXT_SHOW_BACKTRACE"
+            value = ""
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
