--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
-# references:
-# * http://www.objc.io/issue-6/travis-ci.html
-# * https://github.com/supermarin/xcpretty#usage
-
 language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
+
+osx_image: xcode7
+
 before_install:
-- gem install cocoapods # Since Travis is not always on latest version
+- gem install cocoapods
 - pod install --project-directory=Example
+
 install:
 - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
+
 script:
 - set -o pipefail && xcodebuild test -workspace Example/PhotoSliderDemo.xcworkspace -scheme PhotoSliderDemo -destination-timeout 1 -sdk iphonesimulator -configuration Debug -destination 'name=iPhone 6'
 - pod lib lint --quick
