--- a/PhotoSliderDemo.xcodeproj/xcshareddata/xcschemes/PhotoSliderDemo.xcscheme
+++ b/PhotoSliderDemo.xcodeproj/xcshareddata/xcschemes/PhotoSliderDemo.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0720"
+   LastUpgradeVersion = "0710"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -17,6 +17,20 @@
                BlueprintIdentifier = "DC20F4561ADA871D009A4C64"
                BuildableName = "PhotoSliderDemo.app"
                BlueprintName = "PhotoSliderDemo"
+               ReferencedContainer = "container:PhotoSliderDemo.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DC917AC31BB29B7300031F84"
+               BuildableName = "PhotoSliderDemoUITests.xctest"
+               BlueprintName = "PhotoSliderDemoUITests"
                ReferencedContainer = "container:PhotoSliderDemo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -71,6 +85,13 @@
             ReferencedContainer = "container:PhotoSliderDemo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "CG_CONTEXT_SHOW_BACKTRACE"
+            value = ""
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
