update device and simulator

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ install:
   - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
 
 script:
-  - rake build:ios DESTINATION='OS=8.4,name=iPhone 6'
-  - rake build:ios DESTINATION='platform=iOS Simulator,name=iPhone 6s Plus'
+  - rake build:ios DESTINATION='OS=9.3,name=iPhone 6s'
+  - rake build:ios DESTINATION='platform=iOS Simulator,name=iPhone 7 Plus'
   - pod lib lint --quick
