--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ osx_image: xcode7.3
 before_install:
   - git submodule update --init --recursive
   - gem install cocoapods
+  - carthage update --platform ios
 
 install:
   - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
