--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,17 @@
 language: objective-c
-osx_image: xcode10
+osx_image: xcode11.2
+
+env:
+  matrix:
+      - DESTINATION="OS=10.0,name=iPhone 7 Plus"
+      - DESTINATION="platform=iOS Simulator,name=iPhone X"
 
 before_install:
   - gem install cocoapods
   - carthage bootstrap --platform ios
 
 install:
-  - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
+  - gem install xcpretty
 
 script:
   - rake build:ios DESTINATION='OS=10.0,name=iPhone 6s'
